<resources>
    <string name="app_name">MarvelMovies</string>
    <string name="movie_picture">Movie Picture</string>
    <string name="search_for_a_movie">Search a movie…</string>
    <string name="format">Format</string>
    <string name="page_count">Page Count</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="no_results">No Results</string>
    <string name="error">Error occurred</string>
    <string name="no_title">Empty title</string>
    <string name="no_description">Empty description</string>
    <string name="no_format">Empty format</string>
    <string name="no_page_count">Empty page count</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="removed">Removed From Favourites List</string>
    <string name="added">Added To Favourites List</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_correct_data">Enter correct data and try again</string>
    <string name="register_success">Registered successfully</string>
    <string name="register_failure">Error has occurred</string>
    <string name="login_success">Logged successfully</string>
    <string name="login_failure">Failed to log in</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="add_success">Successfully added to favourites</string>
    <string name="remove_success">Successfully removed</string>
    <string name="add_failure">Adding failure</string>
    <string name="no_document">Document doesn\'t exist</string>
    <string name="empty_favourite_list">You don\'t have favourite movies yet!</string>
    <string name="dialog_title">Do you want to remove from favourites?</string>
    <string name="cancelled">Cancelled</string>
    <string name="remove_yes">Yes</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_email_field">Email field can\'t be empty</string>
    <string name="reset_password_success">Confirmation email has been send</string>
    <string name="reset_password_failure">Error has occurred</string>
    <string name="logout">Log out</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="logout_failure">Logout failure</string>
    <string name="change_password_button">Change Password</string>
    <string name="login_with_phone">Log in with phone</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="enter_verification_code">"Enter verification code "</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="wrong_confirmation_code">Wrong confirmation code</string>
    <string name="invalid_request">Invalid request</string>
    <string name="too_many_requests">Too many requests</string>
    <string name="prefix">Prefix</string>
    <string name="darkmode">Dark mode</string>
</resources>