<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.moodup.movies.viewmodel.authentication.AuthenticationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context="com.moodup.movies.ui.authentication.SignupFragment">

        <TextView
            android:id="@+id/enter_phone_number_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:text="@string/enter_phone_number"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_confirmation_number_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:text="@string/enter_verification_code"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/prefix"
            android:layout_width="94dp"
            android:layout_height="56dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/prefix"
            android:padding="15dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_title" />


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:padding="15dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/prefix"
            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_title" />

        <Button
            android:id="@+id/send_verification_code_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/auth_rounded_btn"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="15dp"
            android:text="@string/send_verification_code"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/verification_code"
            android:inputType="textPassword"
            android:padding="15dp"
            android:text="@{viewModel.codeMutableLiveData}"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/enter_confirmation_number_title" />

        <Button
            android:id="@+id/confirm_verification_code_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/auth_rounded_btn"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/verification_code" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="18dp"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="392dp"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>